# tp

./: README.md
LOG550_lab-master/lab1/: .gitignore  Doxyfile
LOG550_lab-master/lab1/doxygen/html/: _license.html  asf_8h.html  dir_30b8b56b34db815a64954e8b425ad116.html  functions_8h.html  functions_8h_source.html  index.html  main_8c.html
LOG550_lab-master/lab1/doxygen/html/search/: all_1.js  all_4.js  all_8.js  defines_0.js  (+7 more)
LOG550_lab-master/lab1/doxygen/latex/: dir_11becd16c164d3822d73319fcac7f8c2.tex  files.tex  functions_8h.tex  index.tex  main_8c.tex  refman.tex
LOG550_lab-master/lab1/lab1/: lab1.cproj
LOG550_lab-master/lab1/lab1/src/: functions.h
LOG550_lab-master/lab2/proto2/: Proto2.cproj
embeded/: README.md
embeded/lab1/doxygen/html/: asf_8h_source.html  dir_11becd16c164d3822d73319fcac7f8c2.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  pages.html
embeded/lab1/doxygen/latex/: asf_8h.tex  dir_30b8b56b34db815a64954e8b425ad116.tex
embeded/lab1/lab1/: lab1.componentinfo.xml
embeded/lab1/lab1/src/: asf.h  main.c
embeded/lab2/: Prototype2.atsln
mpi/: .gitignore  README.md
mpi/par/: hostfile  lab1.c  makefile  run.sh
mpi/seq/: lab1.c  run.sh
mpi_unstable/: .gitignore  CMakeLists.txt  README.md
mpi_unstable/src/: README  lab3.c  lab3_mpi.c  lab3_mpi_async.c  lab3_seq.c  makefile  run.sh
openMP/: README.md  lab2.c  makefile  run.sh
opencl/: .gitignore  Laboratoire4.sln  README.md
opencl/Lab4/: Lab4.cl  Lab4.cpp  Lab4.h  Lab4.vcxproj  Lab4.vcxproj.filters  Lab4_par.cpp  Lab4_seq.cpp
(+11 files in other folders)
